# HatTricks

./: README.md
Allocators/: CMakeLists.txt  README.md  run.ps1
Allocators/source/: custom_memory.cpp  custom_memory.h  main.cpp  memory.cpp  memory.h
Hotloading/: CMakeLists.txt  README.md  build.ps1  build.sh  run.ps1  run.sh
Hotloading/hotmaths/: maths.cpp  maths.h
Hotloading/source/: library_loader.h  main.cpp
LibraryPacking/: CMakeLists.txt  dllpacker.cpp  dllpacker.h
LibraryPacking/project/: main.cpp  testlibrary.cpp
MemoryLibrary/: CMakeLists.txt  README.md  build.ps1  debug.ps1
MemoryLibrary/executable/: main.cpp  memory_module.cpp
NonblockWindow/: CMakeLists.txt  README.md  debug.ps1  run.ps1
NonblockWindow/source/: main.cpp  main.h
